# KeyVisor

./: LICENSE  README.md
hardware/: README.md
hardware/keyvisor/: aes.py
hardware/keyvisor/config/: Makefrag  PrivateConfigs.scala
hardware/keyvisor/src/main/resources/ghdl/: LICENSE  README.md
hardware/keyvisor/src/main/resources/ghdl/aes_128_s_vl/: top_aes_gcm.v
hardware/keyvisor/src/main/resources/ghdl/aes_128_s_vl_XS/: top_aes_gcm.v
hardware/keyvisor/src/main/scala/: RWSmem.scala  common.scala  cpu_mem.scala  enc_dec_unit.scala  handle_wrapper.scala  iv_generator.scala  keyvisor.scala  lfsr.scala  mem_access.scala
software/: README.md
software/demo/: Makefile  enc_dec_demo.c
software/include/: LICENSE  rocc.h
software/include/keyvisor/: LICENSE  debug_handle.h  handle.h  instructions.h  key-handle-helpers.h
software/loadvisorkey/: Makefile  README.md  loadVisorKey.c
software/usecases/: riscv-br-toolchain.cmake
software/usecases/car-feature-licensing/: CMakeLists.txt  README.md  build-deploy-car-gw-riscv.sh  build-motor-unit.sh  build-vendor-x86.sh  car-bus-msg.pb-c.c  car-bus-msg.pb-c.h  car-bus-msg.proto  car_gateway_main.cpp  cli_license_host.cpp  cli_license_host.h  edge_wrapper.cpp  edge_wrapper.h  patch-keystone-sdk-x86.patch  riscv-br-toolchain.cmake  tcp-connection.c
software/usecases/car-feature-licensing/cli_license_enclave/: CMakeLists.txt  channel.c  channel.h  edge_wrapper.c  edge_wrapper.h  keysrv_enclave.c  khandles.c  khandles.h
software/usecases/car-feature-licensing/driving_module/: bus_communication.cpp  bus_communication.h  driving_module.cpp  driving_module.h
software/usecases/car-feature-licensing/include/: car_shared_key.h  channel_msg.h  edge_defines.h  hacks.h  print-utils.h  tcp-connection.h
software/usecases/car-feature-licensing/motor_unit/: CMakeLists.txt  motor_unit.c
software/usecases/car-feature-licensing/scripts/: build-car-gateway.sh  deploy-car-gateway.sh
software/usecases/car-feature-licensing/vendor_service/: CMakeLists.txt  vendor_main.cpp  vendor_main.h  vendor_service.cpp  vendor_service.h
software/usecases/cmake/: FindPROTOBUF-C.cmake
software/usecases/key-value-db/: .gitignore  Makefile-RISCV  README.md  keyvalue-srv.c  kv-storage.c  messages.pb-c.c  messages.pb-c.h  messages.proto  web-srv.c
software/usecases/key-value-db/include/: kv-storage.h
software/usecases/read-only-middlebox/: .gitignore  CMakeLists.txt  README.md  build-client-x86.sh  build-deploy-mb-riscv.sh  build-ssl-server.sh  edge_wrapper.cpp  edge_wrapper.h  encl_message.h  keysrv_host.cpp  keysrv_host.h  keystone-sdk-x86.md  middlebox_main.cpp  sm_expected_hash.h  tcp-connection.c
software/usecases/read-only-middlebox/cmake/: FindPCAP.cmake
software/usecases/read-only-middlebox/include/: channel_msg.h  edge_defines.h  enclave_expected_hash.h  print-utils.h  tls_session_data.h
software/usecases/read-only-middlebox/keysrv_enclave/: CMakeLists.txt  channel.c  channel.h  edge_wrapper.c  edge_wrapper.h  keysrv_enclave.c  keysrv_enclave.h  khandles.c  khandles.h
software/usecases/read-only-middlebox/remote_client/: CMakeLists.txt  client_main.cpp  client_main.h  remote_client.cpp  remote_client.h  ssl_client1.cpp
software/usecases/read-only-middlebox/scripts/: build-middlebox.sh  deploy-middlebox.sh
software/usecases/read-only-middlebox/ssl_server/: CMakeLists.txt  ssl_server.c
software/usecases/read-only-middlebox/traffic_decryptor/: sess_info_db.cpp  sess_info_db.h  simple_tls12_header.hpp  traffic_decryptor.cpp  traffic_decryptor.h  traffic_monitor.cpp  traffic_monitor.h
software/usecases/shared/: usock-connection.c  usock-connection.h  utils.h
